tests/samples/negative/generics/generic_function_duplicate_params.ax
module generic_function_duplicate_params;

fn bad<T, T>(value: T) -> T {
    return value;
}

fn main() -> i32 {
    return 0;
}
